# kinetikit

./: .gitignore  README.md  make_examples.py  pyproject.toml
.github/workflows/: tests.yml
docs/: csv-format.md  resume-notes.md
examples/: README.md  enzyme_inhibition_initial_rates.csv  enzyme_michaelis_menten.csv  enzyme_michaelis_menten_initial_rates.csv  enzyme_substrate_inhibition.csv  enzyme_substrate_inhibition_initial_rates.csv  genchem_first_order_timecourse.csv  genchem_initial_rates_two_reactants.csv  rate_first_order.csv  rate_second_order.csv  rate_zero_order.csv
src/kinetikit/: __init__.py  cli.py  fitting.py  models.py  plotting.py  results.py
tests/: test_cli.py  test_core.py  test_initial_rates.py
