[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "kinetikit"
version = "0.1.0"
description = "Friendly enzyme kinetics and general chemistry rate-law analysis toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Emily", email = "" }]
keywords = ["enzyme-kinetics", "michaelis-menten", "rate-laws", "biochemistry", "chemistry"]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "build>=1.2",
]

[project.scripts]
kinetikit = "kinetikit.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/kinetikit"]
